# rpn-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.config/: rpn.dic  spellcheck.toml
.github/workflows/: ci.yml  workflows.yml
desktop/: Info.plist  rpn-rs.desktop  rpn-rs.icns  rpn-rs.xcf
scripts/: pre-commit
src/: display.rs  lib.rs  main.rs  numbers.rs  stack.rs  ui.rs
src/fixtures/: help.html
src/ui/: fltk.rs  readline.rs  tui.rs
