[package]
name = "rpn-rs"
version = "0.1.4"
authors = ["Nathaniel Clark <Nathaniel.Clark@misrule.us>"]
edition = "2021"
keywords = [ "fltk", "rpn", "calculator", "tui" ]
categories = [ "gui", "mathematics", "command-line-utilities" ]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
env_logger = "0.9"
#libmat = "0.3"
libmat = { git = "https://github.com/utopiabound/libmat", branch = "rref" }
log = "0.4"
num-traits = "0.2"
regex = "1"
rug = "1"
strum_macros = { version = "0.24" }

# GUI
# Use this line to just build with fltk statically
#fltk = "^1.3"
# Use system libs for zlib, png and jpeg
fltk = { version = "^1.4", features = ["system-libpng", "system-libjpeg", "system-zlib"] }
copypasta = "0.8"

# CLI & TUI
html2text = "0.6"

# CLI
rustyline = "11"

# (Rata)TUI
crossterm = "0.26"
ratatui = "0.21"
