[package]
name = "rpn-rs"
version = "0.1.5"
authors = ["Nathaniel Clark <Nathaniel.Clark@misrule.us>"]
edition = "2021"
keywords = [ "fltk", "rpn", "calculator", "tui" ]
categories = [ "gui", "mathematics", "command-line-utilities" ]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
#libmat = "0.3"
libmat = { git = "https://github.com/utopiabound/libmat", branch = "rref" }
log = "0.4"
num-traits = "0.2"
regex = "1"
rug = { version = "1", features = ["num-traits"] }
strum_macros = "0.26"

# GUI
# Use this line to just build with fltk statically
#fltk = "^1.4"
# Use system libs for zlib, png and jpeg
fltk = { version = "^1.4", features = ["system-libpng", "system-libjpeg", "system-zlib"] }
# Disable wayland as it fails codecov checks
copypasta = { version = "0.10", default_features = false, features = [ "x11" ] }

# CLI & TUI
html2text = "0.12"

# CLI
rustyline = "14"

# (Rata)TUI
crossterm = "0.27"
ratatui = "0.26"
