[package]
name = "rpn-rs"
version = "0.1.8"
authors = ["Nathaniel Clark"]
edition = "2024"
keywords = [ "fltk", "rpn", "calculator", "tui" ]
categories = [ "gui", "mathematics", "command-line-utilities" ]
license = "GPL-2.0-only"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
itertools = "0.14"
#libmat = "0.3"
libmat = { git = "https://github.com/utopiabound/libmat", branch = "rref" }
log = "0.4"
num-traits = "0.2"
regex = "1"
rug = { version = "1", features = ["num-traits"] }
strum_macros = "0.27"

# GUI
# Use this line to just build with fltk statically
fltk = { version = "^1.5", features = ["fltk-bundled"] }
# Use system libs for zlib, png and jpeg
#fltk = { version = "^1.5", features = ["system-zlib", "use-ninja"] }
# Disable wayland as it fails codecov checks
copypasta = { version = "0.10", default-features = false, features = [ "x11" ] }

# CLI & TUI
html2text = "0.16"

# CLI
rustyline = "17"

# (Rata)TUI
crossterm = "0.29"
ratatui = "0.30"
